--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .card {
-  width: 120px;
-  height: 200px;
+  width: 140px;
+  height: 230px;
   float: left;
   margin: 10px;
   border: solid;
@@ -9,11 +9,16 @@
 
 .card-vp{
   float: left;
+  margin-top: 0px;
+  margin-left: 10px;
+  color: white;
+  font-size: 30px;
+  text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 }
 
 .card-gem{
   float: right;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   width: 30px;
   height: 30px;
   margin-top: 5px;
@@ -22,11 +27,25 @@
 }
 
 .card-cost{
+  width: 100%;
+}
+
+.card-cost-gem{
   float: left;
   border-radius: 50%;
-  text-align: center;
+  text-align: left;
   width: 30px;
   height: 30px;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  color: white;
+  font-size: 20px;
+  text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+  text-align: center;
+  /* text-indent: -15px; */
+  border-color: white;
+  border-width: 2px;
+  border-style: solid;
 }
 
 .cards-level:after,
@@ -34,6 +53,23 @@
   content: "";
   display: table;
   clear: both;
+}
+
+.card-top{
+  background-color: rgba(255, 255, 255, 0.5);
+  padding-bottom: 10px;
+}
+
+.card-level-1{
+  background-color: blue;
+}
+
+.card-level-2{
+  background-color: yellow;
+}
+
+.card-level-3{
+  background-color: green;
 }
 
 .card-bottom {
