--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   border: solid;
   position: relative;
   background-size: cover;
+  border-radius: 5%;
 }
 
 .card-empty{
@@ -75,6 +76,8 @@
 .card-top{
   background-color: rgba(255, 255, 255, 0.5);
   padding-bottom: 10px;
+  border-top-left-radius: 7%;
+  border-top-right-radius: 7%;
 }
 
 .card-level-1{
