--- a/src/App.css
+++ b/src/App.css
@@ -146,3 +146,13 @@ clear: both;
 .token-container{
   width: 150px;
 }
+
+.card-stack-container
+{
+  position: relative;
+  z-index: 0;
+}
+
+.card-stack{
+  position: absolute;
+}
